사용자 정보에 따른 섭취 영양소 분석 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">Kcalmera</string>
     <string name="title_cam">Food Camera</string>
     <string name="title_manage">Diet</string>
-    <string name="title_profile">Profile</string>
+    <string name="title_profile">Info</string>
 </resources>
